--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <article id="game-container">
 
+<!-- NAME FIELD -->
+
     <section id="player-setup" class="card card--name">
       <div class="card__prompt">
         <div>RECORD YOUR NAME, ADVENTURER</div>
@@ -24,12 +26,73 @@
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange"
            href="#"
-           next="card--class">
+           next="card--species">
           <span class="btn__prompt">></span>
-          <span class="btn__text">Select class</span>
+          <span class="btn__text">Select Species</span>
         </a>
       </div>
     </section>
+
+<!-- SPECIES FIELD -->
+
+     <section id="class-select" class="card card--species">
+      <div class="card__prompt">
+        <div>CHOOSE YOUR SPECIES</div>
+        <div>
+          <a class="card__back btn btn--small"
+             href="#"
+             previous="card--name">
+            <span class="btn__prompt">&lt;</span>
+            <span class="btn__text">Back</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">Human</span>
+              </a>
+            </div>
+
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">Elf</span>
+              </a>
+            </div>
+
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">Orc</span>
+              </a>
+            </div>
+
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--yellow" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">surprise me</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card__button">
+        <a class="card__link btn btn--big btn--orange"
+           href="#"
+           next="card--class">
+          <span class="btn__prompt">></span>
+          <span class="btn__text">Select Class</span>
+        </a>
+      </div>
+    </section>
+
+<!-- CLASS FIELD -->
 
     <section id="class-select" class="card card--class">
       <div class="card__prompt">
@@ -37,7 +100,7 @@
         <div>
           <a class="card__back btn btn--small"
              href="#"
-             previous="card--name">
+             previous="card--species">
             <span class="btn__prompt">&lt;</span>
             <span class="btn__text">Back</span>
           </a>
@@ -64,7 +127,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">berserker</span>
+                <span class="btn__text">Berserker</span>
               </a>
             </div>
 
@@ -139,6 +202,8 @@
         </a>
       </div>
     </section>
+
+<!-- WEAPON FILED -->
 
     <section id="weapon-select" class="card card--weapon">
       <div class="card__prompt">
