Species show up in rows

--- a/index.html
+++ b/index.html
@@ -57,21 +57,25 @@
                 <span class="btn__text">Human</span>
               </a>
             </div>
+          </div>
 
+          <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Elf</span>
               </a>
             </div>
+          </div>
 
+          <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Orc</span>
               </a>
             </div>
-
+          </div>
             <div class="card__button">
               <a class="class__link btn btn--big btn--yellow" href="#">
                 <span class="btn__prompt">></span>
