Few more tweaks on buttons

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt"></span>
+                <span class="btn__prompt">></span>
                 <span class="btn__text">Wizard</span>
               </a>
             </div>
