--- a/index.html
+++ b/index.html
@@ -197,12 +197,17 @@
               </a>
             </div>
           </div>
-            <div class="card__button">
-              <a class="class__link btn btn--big btn--yellow" href="#">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">surprise me</span>
-              </a>
-            </div>
+
+          <!-- Surprise Me Button is Separate from All Other Groups -->
+
+          <div class="card__button">
+            <a class="class__link btn btn--big btn--yellow" href="#">
+              <span class="btn__prompt">></span>
+              <span class="btn__text">Surprise Me</span>
+            </a>
+          </div>
+
+
           </div>
         </div>
       </div>
