--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <div class="card__button">
+      <div class="card__button name">
         <a class="card__link btn btn--big btn--orange"
            href="#"
            next="card--species">
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Human">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Human</span>
               </a>
@@ -61,7 +61,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Elf">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Elf</span>
               </a>
@@ -70,7 +70,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Orc">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Orc</span>
               </a>
@@ -109,21 +109,21 @@
         <div class="row">
           <div class="col-sm-6 all-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Warrior">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Warrior</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Wizard">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Wizard</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Thief">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Thief</span>
               </a>
@@ -132,21 +132,21 @@
 
           <div class="col-sm-6 human-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Monk">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Monk</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Conjurer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Conjurer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Assassin">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Assassin</span>
               </a>
@@ -155,21 +155,21 @@
           </div>
           <div class="col-sm-6 elf-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Valkyrie</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Sorcerer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sorcerer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Archer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Archer</span>
               </a>
@@ -177,21 +177,21 @@
           </div>
           <div class="col-sm-6 orc-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Berserker">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Berserker</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Shaman">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Shaman</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Ninja">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Ninja</span>
               </a>
@@ -201,7 +201,7 @@
           <!-- Surprise Me Button is Separate from All Other Groups -->
 
           <div class="card__button">
-            <a class="class__link btn btn--big btn--yellow" href="#">
+            <a class="class__link btn btn--big btn--yellow" href="#" id="Surprise">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
@@ -241,28 +241,28 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Dagger">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Bow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Bow</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Sword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sword</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="LongSword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Long Sword</span>
               </a>
@@ -271,21 +271,21 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarAxe">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Axe</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Mace">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Mace</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Staff">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Staff</span>
               </a>
@@ -293,28 +293,28 @@
           </div>
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="CrossBow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Cross Bow</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarHammer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Hammer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="BrassKnuckles">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Brass Knuckles</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--yellow" href="#">
+              <a class="weapon__link btn btn--big btn--yellow" href="#" id="SurpriseWeapon">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">surprise me</span>
               </a>
@@ -324,7 +324,7 @@
       </div>
 
       <div class="card__button">
-        <a class="card__link btn btn--big btn--orange"
+        <a class="card__link btn btn--big btn--orange battle"
            href="#"
            next="card--battleground">
           <span class="btn__prompt">></span>
