Sorting classes  works. CSS hide-selection class added

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
           </div>
 
-          <div class="col-sm-6 human-classes">
+          <div class="col-sm-6 human-classes hide-selections">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#" id="Monk">
                 <span class="btn__prompt">></span>
@@ -153,7 +153,7 @@
             </div>
 
           </div>
-          <div class="col-sm-6 elf-classes">
+          <div class="col-sm-6 elf-classes hide-selections">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie">
                 <span class="btn__prompt">></span>
@@ -175,7 +175,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-6 orc-classes">
+          <div class="col-sm-6 orc-classes hide-selections">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#" id="Berserker">
                 <span class="btn__prompt">></span>
