--- a/index.html
+++ b/index.html
@@ -241,28 +241,28 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Dagger">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="Dagger">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Bow">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="Bow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Bow</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Sword">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon thief-weapon valkyrie-weapon ninja-weapon" href="#" id="Sword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sword</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="LongSword">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="LongSword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Long Sword</span>
               </a>
@@ -271,21 +271,21 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarAxe">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="WarAxe">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Axe</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Mace">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="Mace">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Mace</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Staff">
+              <a class="weapon__link btn btn--big btn--blue wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon" href="#" id="Staff">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Staff</span>
               </a>
@@ -293,21 +293,21 @@
           </div>
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="CrossBow">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="CrossBow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Cross Bow</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarHammer">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="WarHammer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Hammer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="BrassKnuckles">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon" href="#" id="BrassKnuckles">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Brass Knuckles</span>
               </a>
