Attack Function Working

--- a/index.html
+++ b/index.html
@@ -330,10 +330,13 @@
           <span class="btn__prompt">></span>
           <span class="btn__text">defeat your enemies</span>
         </a>
+        <button id="enemyAttack"> Enemy Attacks!</button>
+        <button id="userAttack"> You Attack!</button>
       </div>
     </section>
 
     <section id="battleground" class="card card--battleground"></section>
+
 
   </article>
 
