--- a/index.html
+++ b/index.html
@@ -312,14 +312,16 @@
                 <span class="btn__text">Brass Knuckles</span>
               </a>
             </div>
-
-            <div class="card__button">
-              <a class="weapon__link btn btn--big btn--yellow" href="#" id="SurpriseWeapon">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">surprise me</span>
-              </a>
-            </div>
           </div>
+
+        <div class="col-sm-4">
+          <div class="card__button">
+            <a class="weapon__link btn btn--big btn--yellow" href="#" id="SurpriseWeapon">
+              <span class="btn__prompt">></span>
+              <span class="btn__text">surprise me</span>
+            </a>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -361,7 +363,7 @@
               </div>
             </div>
           </div>
-        </div>
+
 
     </section>
 
