Surprise button fixed

--- a/index.html
+++ b/index.html
@@ -240,29 +240,29 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-4">
-            <div class="card__button warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue " href="#" id="Dagger">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="Dagger">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
             </div>
 
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Bow">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="Bow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Bow</span>
               </a>
             </div>
 
-            <div class="card__button warrior-weapon thief-weapon valkyrie-weapon ninja-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Sword">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon thief-weapon valkyrie-weapon ninja-weapon" href="#" id="Sword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sword</span>
               </a>
             </div>
 
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="LongSword">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="LongSword">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Long Sword</span>
               </a>
@@ -270,44 +270,44 @@
           </div>
 
           <div class="col-sm-4">
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarAxe">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="WarAxe">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Axe</span>
               </a>
             </div>
 
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon hide-selections">
+            <div class="card__button">
               <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="Mace">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Mace</span>
               </a>
             </div>
 
-            <div class="card__button wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Staff">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue wizard-weapon sorcerer-weapon shaman-weapon conjurer-weapon" href="#" id="Staff">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Staff</span>
               </a>
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="CrossBow">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon" href="#" id="CrossBow">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Cross Bow</span>
               </a>
             </div>
 
-            <div class="card__button warrior-weapon valkyrie-weapon monk-weapon berserker-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="WarHammer">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue warrior-weapon valkyrie-weapon monk-weapon berserker-weapon" href="#" id="WarHammer">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">War Hammer</span>
               </a>
             </div>
 
-            <div class="card__button thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon hide-selections">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="BrassKnuckles">
+            <div class="card__button">
+              <a class="weapon__link btn btn--big btn--blue thief-weapon valkyrie-weapon archer-weapon monk-weapon assassin-weapon ninja-weapon" href="#" id="BrassKnuckles">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Brass Knuckles</span>
               </a>
@@ -322,8 +322,6 @@
             </a>
           </div>
         </div>
-        </div>
-      </div>
 
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange doBattle"
