--- a/index.html
+++ b/index.html
@@ -343,20 +343,26 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="battle">
-                  <span id="battlePlayerName"> </span>
+                  <h2 id="battlePlayerName"> </h2>
+                  <span id="userHealth"></span>
+                  <span id="userStrength"></span>
+                  <span id="userIntelligence"></span>
               </div>
             </div>
 
             <div class="col-sm-4">
               <div class="battle attack">
-                <button id="enemyAttack"> Enemy Attacks!</button>
-                <button id="userAttack"> You Attack!</button>
+                <!-- <button id="enemyAttack"> Enemy Attacks!</button> -->
+                <button id="userAttack"> Attack!</button>
               </div>
             </div>
 
             <div class="col-sm-4">
               <div class="battle">
-                  <span class="battleEnemy">Enemy</span>
+                  <h2 id="battleEnemyName"></h2>
+                  <span id="enemyHealth"></span>
+                  <span id="enemyStrength"></span>
+                  <span id="enemyIntelligence"></span>
                 </a>
               </div>
             </div>
