can cast spells now, only fireball

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
               <div class="battle attack">
                 <button id="enemyAttack"> Enemy Attacks!</button>
                 <button id="userAttack"> You Attack!</button>
+                <button id="magicAttack"> Cast a spell</button>
               </div>
             </div>
 
