Added new health to DOM

--- a/index.html
+++ b/index.html
@@ -344,9 +344,8 @@
             <div class="col-sm-4">
               <div class="battle">
                   <h2 id="battlePlayerName"> </h2>
-                  <span id="userHealth"></span>
-                  <span id="userStrength"></span>
-                  <span id="userIntelligence"></span>
+                  <div class="user stats">
+                  </div>
               </div>
             </div>
 
@@ -360,9 +359,8 @@
             <div class="col-sm-4">
               <div class="battle">
                   <h2 id="battleEnemyName"></h2>
-                  <span id="enemyHealth"></span>
-                  <span id="enemyStrength"></span>
-                  <span id="enemyIntelligence"></span>
+                  <div class="enemy stats">
+                  </div>
                 </a>
               </div>
             </div>
