Fixed attack button

--- a/index.html
+++ b/index.html
@@ -348,17 +348,11 @@
                   </div>
               </div>
             </div>
-            <div class="card__button">
-              <a class="card__link btn btn--big btn--orange" id="enemyAttack">
-                <span class="btn__prompt">></span>
-                <span class="btn__text">Enemy Attacks!</span>
-              </a>
-            </div>
 
-            <div class="card__button" id="userAttack">
-              <a class="card__link btn btn--big btn--blue" >
+            <div class="card__button">
+              <a class="card__link btn btn--big btn--blue" id="userAttack">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">You Attack!</span>
+                <span class="btn__text"> Attack!</span>
               </a>
             </div>
 
