Fixed attack buttons

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
               </div>
             </div>
 
-            <div class="card__button">
-              <a class="card__link btn btn--big btn--blue" id="userAttack">
+            <div class="card__button" id="userAttack">
+              <a class="card__link btn btn--big btn--blue">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Attack!</span>
               </a>
