--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
         <div class="container-fluid">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battlePlayerName"> </h2>
                   <div class="user stats">
@@ -349,6 +349,7 @@
               </div>
             </div>
 
+            <div class="col-xs-4">
             <div class="card__button">
               <a class="card__link btn btn--big btn--blue" id="userAttack">
                 <span class="btn__prompt">></span>
@@ -370,7 +371,8 @@
                 <label>Boulder Toss<input type="radio" name="spellSelect" value="BoulderToss"></label>
               </div>
             </div>
-            <div class="col-sm-4">
+            </div>
+            <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battleEnemyName"></h2>
                   <div class="enemy stats">
