Random species and classes work but can pull from outside class structure

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
               </a>
             </div>
           </div>
+
+          <div class="card__button">
+            <a class="class__link btn btn--big btn--yellow" href="#" id="surpriseSpecies">
+              <span class="btn__prompt">></span>
+              <span class="btn__text">Surprise Me</span>
+            </a>
+          </div>
+
           </div>
         </div>
       </div>
@@ -201,7 +209,7 @@
           <!-- Surprise Me Button is Separate from All Other Groups -->
 
           <div class="card__button">
-            <a class="class__link btn btn--big btn--yellow" href="#" id="Surprise">
+            <a class="class__link btn btn--big btn--yellow" href="#" id="surpriseClass">
               <span class="btn__prompt">></span>
               <span class="btn__text">Surprise Me</span>
             </a>
