--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
             <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battlePlayerName"> </h2>
+                  <div class="userProgress progress"></div>
                   <div class="user stats">
                   </div>
               </div>
@@ -351,8 +352,6 @@
 
 
           <div class="col-xs-4">
-            <div class="card__button">
-              <a class="card__link btn btn--big btn--blue" id="userAttack">
             <div class="card__button" id="userAttack">
               <a class="card__link btn btn--big btn--blue">
                 <span class="btn__prompt">></span>
@@ -366,7 +365,8 @@
                   <span class="btn__text">Cast a Spell!</span>
                 </a>
               </div>
-              <div>
+            </div>
+            <div>
                 <label>Sphere<input type="radio" name="spellSelect" value="Sphere"></label>
                 <label>Fireball<input type="radio" name="spellSelect" value="Fireball"></label>
                 <label>Lightning Bolt<input type="radio" name="spellSelect" value="LightningBolt"></label>
@@ -374,10 +374,10 @@
                 <label>Boulder Toss<input type="radio" name="spellSelect" value="BoulderToss"></label>
               </div>
             </div>
-            </div>
             <div class="col-xs-4">
               <div class="battle">
                   <h2 id="battleEnemyName"></h2>
+                  <div class="enemyProgress progress"></div>
                   <div class="enemy stats">
                   </div>
                 </a>
