Added popovers to species and classes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Human">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Human" data-container="#Human" data-toggle="popover" data-placement="top" data-content="Increases your Health.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Human</span>
               </a>
@@ -61,7 +61,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Elf">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Elf" data-container="#Elf" data-toggle="popover" data-placement="top" data-content="Increases your Intelligence.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Elf</span>
               </a>
@@ -70,7 +70,7 @@
 
           <div class="col-sm-4">
             <div class="card__button">
-              <a class="species__link btn btn--big btn--blue" href="#" id="Orc">
+              <a class="species__link btn btn--big btn--blue" href="#" id="Orc" data-container="#Orc" data-toggle="popover" data-placement="top" data-content="Increases your Strength.">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Orc</span>
               </a>
@@ -117,21 +117,21 @@
         <div class="row">
           <div class="col-sm-6 all-classes">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Warrior">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Warrior" data-container="#Warrior" data-toggle="popover" data-placement="top" data-content="Increases Health by 25 and Strength by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Warrior</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Wizard">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Wizard" data-container="#Wizard" data-toggle="popover" data-placement="top" data-content="Decreases Health by 15 but increases Intelligence by 4">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Wizard</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Thief">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Thief" data-container="#Thief" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Strength by 1">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Thief</span>
               </a>
@@ -140,21 +140,21 @@
 
           <div class="col-sm-6 human-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Monk">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Monk" data-container="#Monk" data-toggle="popover" data-placement="top" data-content="Increases Health by 10 and Strength by 4">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Monk</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Conjurer">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Conjurer" data-container="#Conjurer" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Intelligence is increased by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Conjurer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Assassin">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Assassin" data-container="#Assassin" data-toggle="popover" data-placement="top" data-content="Health is unaffected but Strength is increased by 1">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Assassin</span>
               </a>
@@ -163,21 +163,21 @@
           </div>
           <div class="col-sm-6 elf-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie" data-container="#Valkyrie" data-toggle="popover" data-placement="top" data-content="Increases Health by 20 and Strength by 1">>
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Valkyrie</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Sorcerer">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Sorcerer" data-container="#Sorcerer" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Intelligence by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Sorcerer</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Archer">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Archer" data-container="#Archer" data-toggle="popover" data-placement="top" data-content="Increases Health by 30 but decreases Strength by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Archer</span>
               </a>
@@ -185,21 +185,21 @@
           </div>
           <div class="col-sm-6 orc-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Berserker">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Berserker" data-container="#Berserker" data-toggle="popover" data-placement="top" data-content="Increases Health by 35 and Strength by 3">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Berserker</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Shaman">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Shaman" data-container="#Shaman" data-toggle="popover" data-placement="top" data-content="Increases Health by 5 and Intelligence by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Shaman</span>
               </a>
             </div>
 
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Ninja">
+              <a class="class__link btn btn--big btn--blue" href="#" id="Ninja" data-container="#Ninja" data-toggle="popover" data-placement="top" data-content="Decreases Health by 5 but increases Strength by 5">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Ninja</span>
               </a>
@@ -249,7 +249,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button warrior-weapon thief-weapon valkyrie-weapon archer-weapon assassin-weapon ninja-weapon">
-              <a class="weapon__link btn btn--big btn--blue" href="#" id="Dagger">
+              <a class="weapon__link btn btn--big btn--blue" href="#" id="Dagger" data-container="#Dagger" data-toggle="popover" data-placement="top" data-content="Increases Health by 30 but decreases Strength by 2">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Dagger</span>
               </a>
@@ -410,6 +410,7 @@
   </article>
 
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="javascripts/player.js"></script>
   <script src="javascripts/species.js"></script>
   <script src="javascripts/classes.js"></script>
