--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
           <div class="col-sm-6 elf-classes hide-selections">
             <div class="card__button">
-              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie" data-container="#Valkyrie" data-toggle="popover" data-placement="top" data-content="Increases Health by 20 and Strength by 1">>
+              <a class="class__link btn btn--big btn--blue" href="#" id="Valkyrie" data-container="#Valkyrie" data-toggle="popover" data-placement="top" data-content="Increases Health by 20 and Strength by 1">
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Valkyrie</span>
               </a>
@@ -373,15 +373,15 @@
                   <span class="btn__text">Cast a Spell!</span>
                 </a>
               </div>
-            </div>
-            <div>
-              <select id="magicSpellSelect">
-                <option value="Sphere">Sphere</option>
-                <option value="FireBall">Fire Ball</option>
-                <option value="LightningBolt">Lightning Bolt</option>
-                <option value="Freeze">Freeze</option>
-                <option value="BoulderToss">Boulder Toss</option>
-              </select>
+              <div>
+                <select id="magicSpellSelect">
+                  <option value="Sphere">Sphere</option>
+                  <option value="FireBall">Fire Ball</option>
+                  <option value="LightningBolt">Lightning Bolt</option>
+                  <option value="Freeze">Freeze</option>
+                  <option value="BoulderToss">Boulder Toss</option>
+                </select>
+              </div>
             </div>
           </div>
           <div class="col-xs-4">
