All randomize functions working

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
         <div class="col-sm-4">
           <div class="card__button">
-            <a class="weapon__link btn btn--big btn--yellow" href="#" id="SurpriseWeapon">
+            <a class="weapon__link btn btn--big btn--yellow" href="#" id="surpriseWeapon">
               <span class="btn__prompt">></span>
               <span class="btn__text">surprise me</span>
             </a>
